--- a/bower.json
+++ b/bower.json
@@ -17,9 +17,7 @@
   ],
   "dependencies": {},
   "devDependencies": {
-    "susy": "^2.2.12",
     "normalize-scss": "normalize.scss#^5.0.3",
-    "Scut": "scut#^1.4.0",
-    "breakpoint-sass": "^2.7.0"
+    "Scut": "scut#^1.4.0"
   }
 }
