--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "del": "^2.2.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-image": "^4.0.0",
     "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0"
-  },
-  "dependencies": {
-    "gulp-image": "^4.0.0"
+    "gulp-sourcemaps": "^1.6.0",
+    "gulp.spritesmith": "^6.5.1",
+    "vinyl-buffer": "^1.0.0"
   }
 }
