--- a/package.json
+++ b/package.json
@@ -6,19 +6,41 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "sasslintConfig": ".sass-lint.yml",
   "author": "Elmer Yu",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "babelify": "^8.0.0",
     "browser-sync": "^2.14.0",
-    "coffee-script": "^1.10.0",
     "del": "^2.2.1",
+    "eslint": "^4.10.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-plugin-compat": "^2.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-image": "^4.0.0",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
+    "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.1",
-    "vinyl-buffer": "^1.0.0"
-  }
+    "stylelint": "^8.2.0",
+    "stylelint-config-sass-guidelines": "^3.1.0",
+    "stylelint-order": "^0.7.0",
+    "stylelint-scss": "^2.1.0",
+    "vinyl-buffer": "^1.0.0",
+    "watchify": "^3.9.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 1% in CN",
+    "safari >= 7"
+  ],
+  "dependencies": {}
 }
