--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint": "^4.10.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-compat": "^2.0.1",
+    "eyeglass": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-image": "^4.0.0",
@@ -25,6 +26,8 @@
     "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.1",
+    "normalize-scss": "^7.0.0",
+    "scut": "^1.4.0",
     "stylelint": "^8.2.0",
     "stylelint-config-sass-guidelines": "^3.1.0",
     "stylelint-order": "^0.7.0",
