--- a/package.json
+++ b/package.json
@@ -14,25 +14,28 @@
     "babel-register": "^6.26.0",
     "babelify": "^8.0.0",
     "browser-sync": "^2.14.0",
+    "browserify": "^14.5.0",
     "del": "^2.2.1",
     "eslint": "^4.10.0",
     "eslint-config-google": "^0.9.1",
     "eslint-plugin-compat": "^2.0.1",
     "eyeglass": "^1.3.0",
     "gulp": "^3.9.1",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-image": "^4.0.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-sourcemaps": "^1.6.0",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-image": "^4.1.0",
+    "gulp-sass": "^3.1.0",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.1",
     "normalize-scss": "^7.0.0",
     "scut": "^1.4.0",
     "stylelint": "^8.2.0",
+    "stylelint-config-idiomatic-order": "^5.0.0",
     "stylelint-config-sass-guidelines": "^3.1.0",
     "stylelint-order": "^0.7.0",
     "stylelint-scss": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
+    "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.9.0"
   },
   "babel": {
@@ -45,5 +48,7 @@
     "> 1% in CN",
     "safari >= 7"
   ],
-  "dependencies": {}
+  "dependencies": {
+    "echarts": "^3.7.2"
+  }
 }
