--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-image": "^4.1.0",
     "gulp-sass": "^3.1.0",
+    "gulp-sequence": "^0.4.6",
     "gulp-sourcemaps": "^2.6.1",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.1",
