feat: add domready and export it to browser global

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
   ],
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "domready": "^1.0.8",
     "echarts": "^3.7.2",
     "global": "^4.3.2",
     "whatwg-fetch": "^2.0.3"
