chore(babel): add rest-spread transform plugin
Now we can use the es6 object spread operation

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,6 +8,9 @@ extends:
 plugins:
   - compat
 parserOptions:
+  emcaVersion: 6
+  ecmaFeatures:
+    experimentalObjectRestSpread: true
   sourceType: module
 rules:
   indent:
