--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-register": "^6.26.0",
     "babelify": "^8.0.0",
@@ -23,6 +24,7 @@
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
     "gulp-image": "^4.1.0",
+    "gulp-nunjucks-render": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.6",
@@ -48,6 +50,9 @@
     ]
   },
   "babel": {
+    "plugins": [
+      "transform-object-rest-spread"
+    ],
     "presets": [
       "es2015"
     ]
@@ -55,12 +60,14 @@
   "browserslist": [
     "last 2 versions",
     "> 1% in CN",
-    "safari >= 7"
+    "safari >= 7",
+    "edge >= 13"
   ],
   "dependencies": {
     "babel-polyfill": "^6.26.0",
     "domready": "^1.0.8",
     "echarts": "^3.7.2",
+    "vanilla-datatables": "^1.6.11",
     "whatwg-fetch": "^2.0.3"
   }
 }
