--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eyeglass": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-data": "^1.2.1",
     "gulp-image": "^4.1.0",
     "gulp-nunjucks-render": "^2.2.1",
     "gulp-rename": "^1.2.2",
@@ -51,7 +52,12 @@
   },
   "babel": {
     "plugins": [
-      "transform-object-rest-spread"
+      [
+        "transform-object-rest-spread",
+        {
+          "useBuiltIns": true
+        }
+      ]
     ],
     "presets": [
       "es2015"
