--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-data": "^1.2.1",
     "gulp-image": "^4.1.0",
+    "gulp-jsbeautifier": "^2.1.1",
     "gulp-nunjucks-render": "^2.2.1",
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
