--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eyeglass": "^1.3.0",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^4.0.0",
+    "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
     "gulp-image": "^4.1.0",
     "gulp-jsbeautifier": "^2.1.1",
@@ -30,7 +31,9 @@
     "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0",
     "gulp-sequence": "^0.4.6",
+    "gulp-size": "^2.1.0",
     "gulp-sourcemaps": "^2.6.1",
+    "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
     "gulp.spritesmith": "^6.5.1",
     "imgurify": "^2.0.0",
