--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,9 @@ env:
   browser: true
   commonjs: true
   es6: true
+globals:
+  echarts: false
+  BMap: false
 extends:
   - 'eslint:recommended'
   - 'google'
