--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "gulp-autoprefixer": "^4.0.0",
     "gulp-cssnano": "^2.1.2",
     "gulp-data": "^1.2.1",
+    "gulp-favicons": "^2.2.7",
     "gulp-image": "^4.1.0",
     "gulp-jsbeautifier": "^2.1.1",
     "gulp-nunjucks-render": "^2.2.1",
